--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,138 @@
-<div class="container">
+<div class="container main-container">
   <h1 class="title">
-    {{ 'PAGES.HOME.TITLE' | translate }}
   </h1>
+  <div class="row">
+
+    <div class="col-4" [hidden]="fullScreenMode">
+      <div class="card border-dark mb-3">
+
+        <div class="card-header">Photos</div>
+        <div class="card-body text-dark">
+          <tree-root #photoTree [nodes]="nodes" [options]="options" (focus)="onFocus($event)"
+                     (activate)="onActivate($event)" (deactivate)="onDeactivate($event)" (updateData)="update()">
+            <ng-template #treeNodeTemplate let-node let-index="index" style="width: 100%">
+              <span>{{ node.data.name }}</span>
+              <span class="badge" [ngClass]="'badge-' + node.data.bucket?.className"
+                    style="float: right; margin-top: 4px; margin-right:8px"
+                    (click)="removeFromBucket(node.data.bucket?.index, node.data)">
+                {{ node.data.bucket?.name }}
+              </span>
+            </ng-template>
+          </tree-root>
+        </div>
+      </div>
+    </div>
+    <div class="col-8" *ngIf="!fullScreenMode">
+      <div class="card border-dark">
+        <div class="card-body">
+          <form>
+            <div class="form-group ">
+              <label for="destinationPath">Source path</label>
+              <div style="float: right;">
+                <button type="submit" class="btn btn-outline-dark btn-sm" style="margin-top: -10px" (click)="saveSettings()">Save</button>
+              </div>
+              <div class="input-group mb-3">
+                <div class="custom-file" ngbTooltip="{{sourcePath}}" tooltipClass="file-path-tooltip">
+                  <input type="file" name="sourcePath" class="custom-file-input" id="sourcePath"
+                         webkitdirectory directory multiple (change)="onSourcePathChanged($event)">
+                  <label class="label-file-path custom-file-label" for="sourcePath">{{sourcePath}}</label>
+                </div>
+              </div>
+            </div>
+
+            <div class="form-group ">
+              <label for="destinationPath">Destination path</label>
+              <div class="input-group mb-3">
+                <div class="custom-file" ngbTooltip="{{destinationPath}}" tooltipClass="file-path-tooltip">
+                  <input type="file" name="destinationPath" class="custom-file-input" id="destinationPath"
+                         webkitdirectory directory multiple (change)="onDestinationPathChanged($event)">
+                  <label class="label-file-path custom-file-label" for="destinationPath">{{destinationPath}}</label>
+                </div>
+              </div>
+            </div>
+            <!--<fieldset class="form-group">-->
+            <!--<div class="row">-->
+            <!--<legend class="col-form-label col-sm-3 pt-0">Radios</legend>-->
+            <!--<div class="col-sm-9">-->
+            <!--<div class="form-check">-->
+            <!--<input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>-->
+            <!--<label class="form-check-label" for="gridRadios1">-->
+            <!--First radio-->
+            <!--</label>-->
+            <!--</div>-->
+            <!--<div class="form-check">-->
+            <!--<input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">-->
+            <!--<label class="form-check-label" for="gridRadios2">-->
+            <!--Second radio-->
+            <!--</label>-->
+            <!--</div>-->
+            <!--<div class="form-check disabled">-->
+            <!--<input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3" disabled>-->
+            <!--<label class="form-check-label" for="gridRadios3">-->
+            <!--Third disabled radio-->
+            <!--</label>-->
+            <!--</div>-->
+            <!--</div>-->
+            <!--</div>-->
+            <!--</fieldset>-->
+            <!--<div class="form-group row">-->
+            <!--<div class="col-sm-2">Checkbox</div>-->
+            <!--<div class="col-sm-10">-->
+            <!--<div class="form-check">-->
+            <!--<input class="form-check-input" type="checkbox" id="gridCheck1">-->
+            <!--<label class="form-check-label" for="gridCheck1">-->
+            <!--Example checkbox-->
+            <!--</label>-->
+            <!--</div>-->
+            <!--</div>-->
+            <!--</div>-->
+            <div class="row justify-content-center">
+              <div class="image-preview">
+                <img [src]="photoPath" [style.max-height.px]="screenHeight"/>
+              </div>
+            </div>
+
+            <div class="form-group row">
+              <!--<ngbd-modal-basic></ngbd-modal-basic>-->
+              <div class="col-12">
+                <div class="btn-group float-right" role="group" aria-label="Basic example">
+                  <button type="button" class="btn btn-secondary" [disabled]="!activeBucket || activeBucket.isEmpty() || actionInProgress" (click)="copy()">Copy</button>
+                  <button type="button" class="btn btn-secondary" [disabled]="!activeBucket || activeBucket.isEmpty() || actionInProgress" (click)="move()">Move</button>
+                  <button type="button" class="btn btn-secondary" [disabled]="true || !activeBucket || activeBucket.isEmpty() || actionInProgress">Remove</button>
+                  <button type="button" class="btn btn-secondary" [disabled]="!activeBucket || activeBucket.isEmpty() || actionInProgress" (click)="showBucket()">Show</button>
+                  <button type="button" class="btn btn-secondary" [disabled]="!activeBucket || activeBucket.isEmpty() || actionInProgress" (click)="emptyBucket()">Empty</button>
+                  <button type="button" class="btn btn-secondary" [disabled]="true || !activeBucket || activeBucket.isEmpty() || actionInProgress">Move...</button>
+                  <button type="button" class="btn btn-secondary" [disabled]="!activeBucket ||!this.allSelected() || actionInProgress" (click)="addUnselected()">Add unselected</button>
+                  <button type="button" class="btn btn-secondary" [disabled]="true || !activeBucket || activeBucket.isEmpty() || actionInProgress">Mark as seen</button>
+                </div>
+              </div>
+            </div>
+
+          </form>
+
+          <div class="row justify-content-center" >
+            <div class="col-3 bucket alert" [ngClass]="getBucketClass(bucket)" *ngFor="let bucket of buckets" (click)="activeBucket = bucket">
+              <p style="text-align: center">{{bucket.name}}</p>
+              <div style="text-align: center;vertical-align: middle;line-height: 35px;">
+                <p>{{bucket.countFiles()}} photos</p>
+                <p>{{bucket.countDirs()}} dirs</p>
+              </div>
+            </div>
+          </div>
+
+          <ngb-alert *ngIf="alert != EMPTY_ALERT && !actionInProgress" [type]="alert.type" (close)="closeAlert()" style="margin-top: 20px">{{alert.message}}</ngb-alert>
+
+          <span style="margin-right: 10px">{{actionInProgress?.name}}</span>
+          <div class="progress" *ngIf="actionInProgress">
+            <div class="progress-bar" role="progressbar" [style.width]="actionInProgress.progress + '%'" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{actionInProgress.progress}} %</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-12" *ngIf="fullScreenMode">
+      <div class="image">
+        <img [src]="photoPath" [style.max-height.px]="screenHeight"/>
+      </div>
+    </div>
+  </div>
 </div>
