tagowanie zdjec na windowsie

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,8 @@
 //@import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
 @import "sticky-footer-navbar.css";
 @import "../node_modules/angular-tree-component/dist/angular-tree-component.css";
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
 
 html, body {
   padding: 0;
