--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -86,22 +86,61 @@
             <!--</div>-->
             <!--</div>-->
             <!--</div>-->
-            <div class="row justify-content-center">
-              <div class="image-preview">
+            <div class="row">
+              <div class="col-4 image-preview">
                 <img [src]="photoPath" [style.max-height.px]="screenHeight"/>
+              </div>
+              <div class="col-8">
+                <div *ngFor="let attribute of attributes">
+                  <mat-form-field *ngIf="attribute.editable && attribute.multivalue" style="width: 80%;">
+                    <mat-chip-list #chipList>
+                      <mat-chip *ngFor="let value of attribute.value" [removable]="true" (removed)="removeAttributeValue(attribute, value)">
+                        {{value}}
+                        <mat-icon matChipRemove>cancel</mat-icon>
+                      </mat-chip>
+                      <input [matChipInputFor]="chipList" [placeholder]="attribute.name" [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+
+                             (matChipInputTokenEnd)="addAttributeValue(attribute, $event)">
+                    </mat-chip-list>
+                  </mat-form-field>
+                  <input *ngIf="attribute.editable && !attribute.multivalue" [ngModel]="attribute.value"/>
+                  <li *ngIf="!attribute.editable">{{attribute.name}} : {{attribute.value}}</li>
+                  <button *ngIf="attribute.editable" type="submit" class="btn btn-outline-dark btn-sm" style="margin-top: 20px;float:right" (click)="updateAttribute(attribute)">Update</button>
+                </div>
+
+                <!--<button mat-mini-fa color="primary" style="float:right; margin-right: 20px">-->
+                  <!--<mat-icon>done</mat-icon>-->
+                <!--</button>-->
+
+                <!--<mat-form-field style="width: 100%;">-->
+                <!--<mat-chip-list #chipList>-->
+                  <!--<mat-chip>Papadum</mat-chip>-->
+                  <!--<mat-chip>Naan</mat-chip>-->
+                  <!--<mat-chip>Dal</mat-chip>-->
+                  <!--<input placeholder="New fruit..."-->
+                         <!--[matChipInputFor]="chipList"-->
+                  <!--&gt;-->
+                <!--</mat-chip-list>-->
+<!---->
+                <!--</mat-form-field>-->
+                <!--<ul>-->
+                  <!--<li *ngFor="let attribute of attributes">
+                    {{attribute}}-->
+                <!--</li>-->
+                <!--</ul>-->
               </div>
             </div>
 
             <div class="form-group row">
               <!--<ngbd-modal-basic></ngbd-modal-basic>-->
               <div class="col-12">
-                <div class="btn-group float-right" role="group" aria-label="Basic example">
+                <div class="btn-group" role="group" aria-label="Basic example">
                   <button type="button" class="btn btn-secondary" [disabled]="!activeBucket || activeBucket.isEmpty() || actionInProgress" (click)="copy()">Copy</button>
-                  <button type="button" class="btn btn-secondary" [disabled]="!activeBucket || activeBucket.isEmpty() || actionInProgress" (click)="move()">Move</button>
+                  <button type="button" class="btn btn-secondary" [disabled]="!activeBucket || activeBucket.isEmpty() || actionInProgress" (click)="move()">Move...</button>
                   <button type="button" class="btn btn-secondary" [disabled]="true || !activeBucket || activeBucket.isEmpty() || actionInProgress">Remove</button>
                   <button type="button" class="btn btn-secondary" [disabled]="!activeBucket || activeBucket.isEmpty() || actionInProgress" (click)="showBucket()">Show</button>
                   <button type="button" class="btn btn-secondary" [disabled]="!activeBucket || activeBucket.isEmpty() || actionInProgress" (click)="emptyBucket()">Empty</button>
-                  <button type="button" class="btn btn-secondary" [disabled]="true || !activeBucket || activeBucket.isEmpty() || actionInProgress">Move...</button>
+                  <button type="button" class="btn btn-secondary" [disabled]="true || !activeBucket || activeBucket.isEmpty() || actionInProgress">Tags</button>
                   <button type="button" class="btn btn-secondary" [disabled]="!activeBucket ||!this.allSelected() || actionInProgress" (click)="addUnselected()">Add unselected</button>
                   <button type="button" class="btn btn-secondary" [disabled]="true || !activeBucket || activeBucket.isEmpty() || actionInProgress">Mark as seen</button>
                 </div>
