--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,7 +13,7 @@ div.tree::before {
   content: "";
   position: absolute;
   border-left: 1px dotted #23527c;
-  height: 100%;
+  //height: 100%;
   top: -14px;
   left: 12px
 }
