--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -177,12 +177,8 @@
             </div>
           </div>
 
-          <ngb-alert *ngIf="alert != EMPTY_ALERT && !actionInProgress" [type]="alert.type" (close)="closeAlert()" style="margin-top: 20px">{{alert.message}}</ngb-alert>
+          <app-status [actionInProgress]="actionInProgress" [alert]="alert"></app-status>
 
-          <span style="margin-right: 10px">{{actionInProgress?.name}}</span>
-          <div class="progress" *ngIf="actionInProgress">
-            <div class="progress-bar" role="progressbar" [style.width]="actionInProgress.progress + '%'" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{actionInProgress.progress}} %</div>
-          </div>
         </div>
       </div>
     </div>
